class AppStrings {
  AppStrings._();

  static const String roboto = 'Roboto';

  static const String home = "Home";
  static const String nullString = "null";
  static const String mainNavigator = "Main Navigator";
  static const String version = "Version";

  static const String threeDots = "...";
  static const String emptyString = "";
...
  static const String customer = "Customer";
  static const String serviceProviderInTwoLine = "Service\nProvider";

  /// Log in Screen
  static const String logIn = "Log In";
  static const String emailId = "Email Id";
  static const String password = "Password";
  static const String forgotPassword = "forgot password?";
  static const String tncMsgLoginScreen =
      "By clicking Log In, you agree to our";
  static const String termsAndConditions = " Terms and Conditions ";
  static const String privacyStatement = " Privacy Statement";
  static const String iAgreeTo = "I agree to ";
...

  /// Create New Password Screen
  static const String createNewPassword = "Create New Password";
  static const String currentPassword = "Enter Current Password";
  static const String enterPassword = "Enter Password";
  static const String reEnterPassword = "Re - Enter Password";
  static const String submit = "Submit";

  /// Choose Category
  static const String chooseCategory = "Choose Category";
  static const String selectYourServiceCategory = "Choose service category";
  static const String residential = "Residential";
  static const String commercial = "Commercial";
...
  static const String serviceDetails = "Service Details";
  static const String pricingDetails = "Pricing Details";
  static const String done = "Done";

  static const String callCustomer = "Call Customer";
  static const String serviceInfo = "Service Info";
  static const String navigate = "Navigate";
  static const String reached = "Reached?";

  static const String startBooking = "Start Booking";
  static const String orderDetails = 'Order Details';
  static const String taxAmount = "Tax Amount";
  static const String totalPayment = "Total Payment";
...
  static const String searchYourLocation = "Search your location";

  static const String pleaseEnterTheMandatoryField =
      "Please enter the mandatory field";
  static const String settings = "Settings";
  static const String sms = "SMS";
  static const String email = "Email";

  static const String estimatedTime = "Estimated time";
}

